홈페이지 업데이트

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </section>
-        <!-- About-->
+        <!-- Career-->
         <section class="page-section" id="Career">
             <div class="container">
                 <div class="text-center">
@@ -169,48 +169,77 @@
                 </div>
                 <ul class="timeline">
                     <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/military.png" alt="" /></div>
+                        <div class="timeline-panel">
+                          <div class="timeline-heading">
+                              <h4 class="subheading">국방부 네트워크운용병</h4>
+                              <div class="timeline-body">
+                                <p class="text-muted">2015.12-2017.09</p>
+                                <p class="text-muted">*네트워크 장비 설치 및 점검</p>
+                                <p class="text-muted">*관제 프로그램 구현 </p>
+                                <p class="text-muted">*국방부 주최 공개SW 역량강화교육이수 </p>
+                                </div>
+                          </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/university.jpg" alt="" /></div>
                         <div class="timeline-panel">
+                          <div class="timeline-heading">
+                              <h4 class="subheading">중앙대 UC-lab</h4>
+                          </div>
+                          <div class="timeline-body">
+                            <p class="text-muted">2018.01-2020.02</p>
+                            <p class="text-muted">학부연구생</p>
+                            <p class="text-muted">*한국통신학회 추계학술발표회 우수논문(Anomaly Detection)</p>
+                            <p class="text-muted">*연구실 프로젝트 참여(AI CCTV, Egde Computing 등)</p>
+                            <p class="text-muted">*학회 소논문 (4회)</p>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
+
+                    <li class="timeline">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.png" alt="" /></div>
+                        <div class="timeline-panel">
+                          <div class="timeline-heading">
+                              <h4>2018.07.02-08.31</h4>
+                              <h4 class="subheading">보안솔루션기업, Seculayer</h4>
+                          </div>
+                          <div class="timeline-body">
+                              <p class="text-muted">*인턴 근무</p>
+                            <p class="text-muted">*한국통신학회 추계학술발표회 우수논문(Anomaly Detection)</p>
+                            <p class="text-muted">*연구실 프로젝트 참여(AI CCTV, Egde Computing 등)</p>
+                            <p class="text-muted">*학회 소논문 (4회)</p>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/carchap.png" alt="" /></div>
+                        <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2014-2020</h4>
-                                <h4 class="subheading">중앙대학교</h4>
-                                <h5 class="subheading">(Chung-Ang University)</h5>
+                                <h4>2018.12~</h4>
+                                <h4 class="subheading">모빌리티 플랫폼, 카찹</h4>
+                                <div class="timeline-body">
+                                  <p class="text-muted">*Android App 개발</p>
+                                  <p class="text-muted">*REST API Server 개발 </p>
+                                  <p class="text-muted">*스타트업 어워즈 대상 외 다수 </p>
+                                  </div>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted"></p></div>
+                        </div>
+                    </li>
+                    <li class="timeline">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/tmax.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>2020.02~</h4>
+                                <h4 class="subheading">SW기업, TmaxData</h4>
                             </div>
                             <div class="timeline-body">
-                              <p class="text-muted">*공과대학 컴퓨터공학부</p>
-                              <p class="text-muted">*UC-lab 학부연구생</p>
-                                <h4>2014-2020</h4>
-                              </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                              <p class="text-muted">Research Engineer(연구원)</p>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>December 2012</h4>
-                                <h4 class="subheading">Transition to Full Service</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>July 2014</h4>
-                                <h4 class="subheading">Phase Two Expansion</h4>
-                            </div>
-                            <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
