확장자 변경

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Interests">Interests</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Project</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Project">Project</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Career">Career</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Award</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Etc</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Award">Award</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Etc">Etc</a></li>
                     </ul>
                 </div>
             </div>
@@ -67,7 +67,7 @@
             </div>
         </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="Project">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
@@ -251,10 +251,10 @@
             </div>
         </section>
         <!-- Team-->
-        <section class="page-section bg-light" id="team">
+        <section class="page-section bg-light" id="Award">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+                    <h2 class="section-heading text-uppercase">ETC</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
@@ -308,7 +308,7 @@
             </div>
         </div>
         <!-- Contact-->
-        <section class="page-section" id="contact">
+        <section class="page-section" id="Etc">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
