파일 형식 바꿈

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </li>
 
                     <li class="timeline">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.png" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.jpg" alt="" /></div>
                         <div class="timeline-panel">
                           <div class="timeline-heading">
                               <h4>2018.07.02-08.31</h4>
@@ -216,12 +216,12 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/carchap.png" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/carchap.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2018.12~</h4>
                                 <h4 class="subheading">모빌리티 플랫폼, 카찹</h4>
                                 <div class="timeline-body">
+                                  <p class="text-muted">2018.12~</p>
                                   <p class="text-muted">*Android App 개발</p>
                                   <p class="text-muted">*REST API Server 개발 </p>
                                   <p class="text-muted">*스타트업 어워즈 대상 외 다수 </p>
