--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Career</h2>
+                    <h3 class="section-heading text-uppercase">2014.03 중앙대학교 입학</h3>
+                    <h3 class="section-heading text-uppercase"> | </h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -176,8 +178,9 @@
                               <div class="timeline-body">
                                 <p class="text-muted">2015.12-2017.09</p>
                                 <p class="text-muted">*네트워크 장비 설치 및 점검</p>
-                                <p class="text-muted">*관제 프로그램 구현 </p>
+                                <p class="text-muted">*네트워크 관제 프로그램 구현 </p>
                                 <p class="text-muted">*국방부 주최 공개SW 역량강화교육이수 </p>
+                                <a class="btn" href="assets/pdf/military_career.pdf" download>이수증.pdf</a>
                                 </div>
                           </div>
                         </div>
@@ -191,7 +194,8 @@
                           <div class="timeline-body">
                             <p class="text-muted">2018.01-2020.02</p>
                             <p class="text-muted">학부연구생</p>
-                            <p class="text-muted">*한국통신학회 추계학술발표회 우수논문(Anomaly Detection)</p>
+                            <p class="text-muted">*한국통신학회 추계학술발표회 우수논문</p>
+                            <a class="btn" href="assets/pdf/best_award_page.pdf" download>Anomaly Detection...pdf</a>
                             <p class="text-muted">*연구실 프로젝트 참여(AI CCTV, Egde Computing 등)</p>
                             <p class="text-muted">*학회 소논문 (4회)</p>
                             </div>
@@ -203,14 +207,14 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.jpg" alt="" /></div>
                         <div class="timeline-panel">
                           <div class="timeline-heading">
-                              <h4>2018.07.02-08.31</h4>
                               <h4 class="subheading">보안솔루션기업, Seculayer</h4>
                           </div>
                           <div class="timeline-body">
-                              <p class="text-muted">*인턴 근무</p>
-                            <p class="text-muted">*한국통신학회 추계학술발표회 우수논문(Anomaly Detection)</p>
-                            <p class="text-muted">*연구실 프로젝트 참여(AI CCTV, Egde Computing 등)</p>
-                            <p class="text-muted">*학회 소논문 (4회)</p>
+                            <p class="text-muted">2018.07.02-08.31</p>
+                            <p class="text-muted">인턴 근무</p>
+                            <p class="text-muted">*AI를 이용한 네트워크 침입탐지기법 리서치</p>
+                            <p class="text-muted">*AI 기반의 침입탐지 온톨로지 구축</p>
+
                             </div>
                             <div class="timeline-body"><p class="text-muted"></p></div>
                         </div>
@@ -238,7 +242,10 @@
                                 <h4 class="subheading">SW기업, TmaxData</h4>
                             </div>
                             <div class="timeline-body">
+                              <p class="text-muted">2020.02~</p>
                               <p class="text-muted">Research Engineer(연구원)</p>
+                              <p class="text-muted">*데이터분석툴 시각화 설계, 구현</p>
+                              <p class="text-muted">*데이터 분석 방법 설계, 구현</p>
                             </div>
                         </div>
                     </li>
