--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/home_logo.svg" alt="" /></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/home-3-48.png" alt="" /></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Interests">Interests</a></li>
@@ -35,8 +35,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To Our Studio!</div>
-                <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+                <div class="masthead-subheading">Welcome To my Portfolio page,</div>
+                <div class="masthead-subheading">I hope we have a good relationship.</div>
                 <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#Interests">Tell Me More</a> -->
             </div>
         </header>
@@ -45,23 +45,43 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Interests</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">안드로이드를 통해 개발자로서 첫발을 내딛고,  Flutter,  node.js 등을 배우며 나아가고 있습니다.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <span class="fa-stack fa-4x">
+                              <div class="image-container">
+                                <img class="img-fluid" src="assets/img/interest/android.jpg" alt=""/>
+                              </div>
+                            </span>
                     </div>
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <span class="fa-stack fa-4x">
+                              <div class="image-container">
+                                <img class="img-fluid" src="assets/img/interest/flutter.jpg" alt=""/>
+                              </div>
+                            </span>
                     </div>
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-lock fa-stack-1x fa-inverse"></i></span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <span class="fa-stack fa-4x">
+                              <div class="image-container">
+                                <img class="img-fluid" src="assets/img/interest/node_js.jpg" alt=""/>
+                              </div>
+                            </span>
+                    </div>
+                </div>
+                <div class="row text-center">
+                  <div class="col-md-4">
+                    <br><br>
+                      <p class="text-muted">Java, Kotiln</p>
+                  </div>
+                    <div class="col-md-4">
+                      <br><br>
+                        <p class="text-muted">Dart</p>
+                    </div>
+                    <div class="col-md-4">
+                      <br><br>
+                        <p class="text-muted">JavaScript</p>
                     </div>
                 </div>
             </div>
