--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To my Portfolio page,</div>
+                <div class="masthead-subheading">Welcome To my Introductory page,</div>
                 <div class="masthead-subheading">I hope we have a good relationship.</div>
                 <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#Interests">Tell Me More</a> -->
             </div>
@@ -90,8 +90,8 @@
         <section class="page-section bg-light" id="Project">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Project</h2>
+                    <h3 class="section-subheading text-muted">my exciting project </h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -100,11 +100,11 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="assets/img/portfolio/carchap/carchap_thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">통합 모빌리티 플랫폼, 카찹</div>
+                                <div class="portfolio-caption-subheading text-muted">FrontEnd</div>
                             </div>
                         </div>
                     </div>
@@ -114,53 +114,11 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="assets/img/portfolio/public_mask/thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3"
-                                ><div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt=""
-                            /></a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4"
-                                ><div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt=""
-                            /></a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5"
-                                ><div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt=""
-                            /></a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">공적 마스크 알람, 안내 서비스</div>
+                                <div class="portfolio-caption-subheading text-muted">FrontEnd</div>
                             </div>
                         </div>
                     </div>
@@ -170,11 +128,53 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="assets/img/portfolio/random_lunch/thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">식권 기반 음식점 추천 서비스, Random Lunch</div>
+                                <div class="portfolio-caption-subheading text-muted">FrontEnd</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3"
+                                ><div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/multi_filter/thumbnail.png" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">사용자 지정 멀티 필터링 시스템 </div>
+                                <div class="portfolio-caption-subheading text-muted">BackEnd</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4"
+                                ><div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/anomaly_detection/thumbnail.jpg" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">AI를 활용한 Anomaly Detection 시스템 구축</div>
+                                <div class="portfolio-caption-subheading text-muted">Research</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5"
+                                ><div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/auto_recorder/thumbnail.jpg" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">수업 도우미, Auto Recorder</div>
+                                <div class="portfolio-caption-subheading text-muted">FrontEnd</div>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/seculayer.jpg" alt="" /></div>
                         <div class="timeline-panel">
                           <div class="timeline-heading">
-                              <h4 class="subheading">보안솔루션기업, Seculayer</h4>
+                              <h4 class="subheading">보안솔루션기업,<a href="http://www.seculayer.co.kr/ko/" target="_blank"> Seculayer </a> </h4>
                           </div>
                           <div class="timeline-body">
                             <p class="text-muted">2018.07.02-08.31</p>
@@ -243,7 +243,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/carchap.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">모빌리티 플랫폼, 카찹</h4>
+                                <h4 class="subheading">모빌리티플랫폼,<a href="https://www.carchapapp.com/" target="_blank"> Carchap </a> </h4>
                                 <div class="timeline-body">
                                   <p class="text-muted">2018.12~</p>
                                   <p class="text-muted">*Android App 개발</p>
@@ -258,7 +258,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/career/tmax.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">SW기업, TmaxData</h4>
+                                  <h4 class="subheading">SW기업,<a href="https://www.tmaxsoft.com/" target="_blank"> Tmaxsoft </a> </h4>
                             </div>
                             <div class="timeline-body">
                               <p class="text-muted">2020.02~</p>
@@ -270,13 +270,13 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>Be Part<br />Of Our<br />Story!</h4>
+                            <h4>Be Part<br />Of My<br />Story!</h4>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-        <!-- Team-->
+        <!-- Team
         <section class="page-section bg-light" id="Award">
             <div class="container">
                 <div class="text-center">
@@ -314,72 +314,28 @@
                 </div>
             </div>
         </section>
+        -->
         <!-- Clients-->
-        <div class="py-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/envato.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/designmodo.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/themeforest.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/creative-market.jpg" alt="" /></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <!-- Contact-->
         <section class="page-section" id="Etc">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Contact me</h2>
+                    <div class="container">
+                        <div class="masthead-subheading">Gmail : gyeongseok.kang@gmail.com</div>
+                        <div class="masthead-subheading">Naver : rkdrudtjr159@naver.com</div>
+                        <br>
+                        <a href="mailto:gyeongseok.kang@gmail.com" title="이메일">메일보내기</a>
+                    </div>
+
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group mb-md-0">
-                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number." />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-md-0">
-                                <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <div id="success"></div>
-                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
-                    </div>
-                </form>
             </div>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © Your Website 2020</div>
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                    <div class="col-lg-4 text-lg-right"><a class="mr-3" href="#!">Privacy Policy</a><a href="#!">Terms of Use</a></div>
-                </div>
+
             </div>
         </footer>
         <!-- Portfolio Modals--><!-- Modal 1-->
@@ -392,10 +348,22 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <h3 class="text-uppercase">통합 모빌리티 서비스 플랫폼 구축</h3>
+                                    <ul class="list-inline">
+                                        <br>
+                                        <h5 class="text-uppercase">Language</h5>
+                                        <li>&lt Android, Kotlin &gt</li>
+                                        <br>
+                                        <h5 class="text-uppercase">Library</h5>
+                                        <li>&lt FireBase, GoogleMap, RestAPI, RXAndroid, Retrifit etc.. &gt</li>
+                                        <br>
+                                        <h5 class="text-uppercase">Date</h5>
+                                        <li>&lt 2018.12~ now &gt</li>
+                                    </ul>
+                                    <h5 class="text-uppercase">소개영상</h5>
+                                    <video width="640px" height=" 360px" src="assets/video/carchap_service.mp4" controls autoplay muted poster="assets/img/portfolio/carchap/carchap_poster.jpg"></video>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/carchap/app_screen.jpg" alt="" />
+                                    <p></p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Threads</li>
