--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Project">Project</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Career">Career</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Award">Award</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Etc">Etc</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -316,9 +316,54 @@
         </section>
         -->
         <!-- Clients-->
+        <section class="page-section" id="Award">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Award</h2>
+                    <h3 class="section-subheading text-muted"> 수상이력 사사사삭</h3>
+                </div>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                              <div class="image-container">
+                                <img class="img-fluid" src="assets/img/interest/android.jpg" alt=""/>
+                              </div>
+                            </span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                              <div class="image-container">
+                                <img class="img-fluid" src="assets/img/interest/flutter.jpg" alt=""/>
+                              </div>
+                            </span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                              <div class="image-container">
+                                <img class="img-fluid" src="assets/img/interest/node_js.jpg" alt=""/>
+                              </div>
+                            </span>
+                    </div>
+                </div>
+                <div class="row text-center">
+                  <div class="col-md-4">
+                    <br><br>
+                      <p class="text-muted">Java, Kotiln</p>
+                  </div>
+                    <div class="col-md-4">
+                      <br><br>
+                        <p class="text-muted">Dart</p>
+                    </div>
+                    <div class="col-md-4">
+                      <br><br>
+                        <p class="text-muted">JavaScript</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Contact-->
-        <section class="page-section" id="Etc">
+        <section class="page-section" id="Contact">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact me</h2>
