수상이력 업데이트

--- a/index.html
+++ b/index.html
@@ -320,45 +320,22 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Award</h2>
-                    <h3 class="section-subheading text-muted"> 수상이력 사사사삭</h3>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                              <div class="image-container">
-                                <img class="img-fluid" src="assets/img/interest/android.jpg" alt=""/>
-                              </div>
-                            </span>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                              <div class="image-container">
-                                <img class="img-fluid" src="assets/img/interest/flutter.jpg" alt=""/>
-                              </div>
-                            </span>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                              <div class="image-container">
-                                <img class="img-fluid" src="assets/img/interest/node_js.jpg" alt=""/>
-                              </div>
-                            </span>
+                    <div class="container">
+                      <div class="masthead-subheading2">2018</div>
+                      <div class="masthead-subheading2">학술대회 학부 우수논문[GAN모델과 DNN모델을 활용한 Anomaly Detection에 관한 연구](2018.11.17) | 한국통신학회</div>
+                      <p>
+                      <div class="masthead-subheading2">2019</div>
+                      <div class="masthead-subheading2">경기도 대학생 융합기술 창업지원 대상(2019.06.04) | 차세대융합기술</div>
+                      <div class="masthead-subheading2">청년 스타트업 어워즈 대상(2019.09.21) | 국회 산업통상자원중소벤터기업위원</div>
+                      <div class="masthead-subheading2">창업아이디어 경진대회 은상(2019.09.27) | 서울과학기술대학교</div>
+                      <div class="masthead-subheading2">흑석캠퍼스타운 창업경진대회 대상(2019.10.31) | 흑석 캠퍼스타운 추진단</div>
+                      <div class="masthead-subheading2">SW전공 올림피아드 : Best Software Awarods 우수상(2019.11.22) | 중앙대학교</div>
+                      <div class="masthead-subheading2">SW전공 올림피아드 : SW연구활동 발표대회 장려상(2019.11.22) | 중앙대학교</div>
+                      <div class="masthead-subheading2">헬로 스타트업 공모전 우수상(2019.11.22) | 강한창조경제혁신센터</div>
+                      <div class="masthead-subheading2">스마트시티즌 챌린지 최우수상(2019.12.22) | 서울디지털재단</div>
                     </div>
                 </div>
-                <div class="row text-center">
-                  <div class="col-md-4">
-                    <br><br>
-                      <p class="text-muted">Java, Kotiln</p>
-                  </div>
-                    <div class="col-md-4">
-                      <br><br>
-                        <p class="text-muted">Dart</p>
-                    </div>
-                    <div class="col-md-4">
-                      <br><br>
-                        <p class="text-muted">JavaScript</p>
-                    </div>
-                </div>
+
             </div>
         </section>
 
