2 리뉴얼 진행중 - 상단 슬로건 변경

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To my Introductory page,</div>
-                <div class="masthead-subheading">I hope we have a good relationship.</div>
-                <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#Interests">Tell Me More</a> -->
+                 <div class="masthead-subheading">Kang |딥하게 일하는 개발자</div>
+                <div class="masthead-subheading">2년차, 개발자 강경석입니다.</div>
             </div>
         </header>
         <!-- Services-->
