2 리뉴얼 진행중 - 소개글 작성중

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Gyeongseok Kang</title>
+        <title>Kang | Deep-working Developer</title>
         <link rel="icon" type="image/x-icon" href="assets/img/tap_logo.svg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -21,13 +21,14 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/home-3-48.png" alt="" /></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><font color=white> Kang </font></a></li>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Interests">Interests</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Interduce">Interduce</a></li>
+                          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Career">Career</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Project">Project</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Career">Career</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Award">Award</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact">Contact</a></li>
+                        <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact">Contact</a></li>-->
                     </ul>
                 </div>
             </div>
@@ -35,17 +36,23 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                 <div class="masthead-subheading">Kang |딥하게 일하는 개발자</div>
-                <div class="masthead-subheading">2년차, 개발자 강경석입니다.</div>
+                 <div class="masthead-subheading"><strong>Kang | Deep-working Developer <br><p> 딥하게 일하는 개발자 강경석입니다.</strong></div>
+
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="Interests">
+        <section class="page-section" id="Interduce">
             <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Interests</h2>
-                    <h3 class="section-subheading text-muted">안드로이드를 통해 개발자로서 첫발을 내딛고,  Flutter,  node.js 등을 배우며 나아가고 있습니다.</h3>
+                <div class="text-left">
+                    <h2 class="section-heading text-uppercase">Interduce</h2>
+                    <h3 class="section-subheading text-muted"><b>2년 차 개발자로 오픈소스 프로젝트를 이용한 기능을 기획, 개발하고 있습니다.
+                      <br>학부생시절 창업한 회사의 CTO로 근무하며 seies-A 투자를 유치하고 팀이 성장할 때까지 필요한 기술을 책임졌던 경험이 있습니다.
+                    <br><br> 새로운 기능 개발, 오픈소스를 이용한 새로운 서비스를 만들어가는 것을 좋아합니다. 이를 위해서 지금 하고 있는 업무에 집중하는 동시에
+                  블로그, 영상, 책을 통해 최신 기술을 습득하고 현재 업무에 활용하기 위해 끊임없이 고민하고 공부합니다.
+                    <br><br> 지식과 코드는 나눌수록 좋아진다고 믿는 개발자입니다. 사내 스터디를 좋아하고 블로그에 공부한 내용을 정리하며, 협업이 가능한 코드를
+                  짜기 위해 노력하고 공유합니다.</h3>
                 </div>
+                <!--
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -83,6 +90,7 @@
                         <p class="text-muted">JavaScript</p>
                     </div>
                 </div>
+              -->
             </div>
         </section>
         <!-- Portfolio Grid-->
@@ -275,7 +283,7 @@
                 </ul>
             </div>
         </section>
-     
+
         <section class="page-section" id="Award">
             <div class="container">
                 <div class="text-center">
@@ -299,7 +307,7 @@
             </div>
         </section>
 
-        <!-- Contact-->
+        <!-- Contact
         <section class="page-section" id="Contact">
             <div class="container">
                 <div class="text-center">
@@ -314,6 +322,7 @@
                 </div>
             </div>
         </section>
+        -->
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
