내용 업데이트 및 관리

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Career">Career</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Project">Project</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Award">Award</a></li>
-                        <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact">Contact</a></li>-->
+
                     </ul>
                 </div>
             </div>
@@ -214,6 +214,7 @@
                                         <br>▶ Research Engineer(연구원)
                                         <br>▶ 데이터분석툴 시각화 설계, 구현
                                         <br>▶ 데이터 분석 방법 설계, 구현
+                                        <br>▶ 오픈소스(Plotly)을 활용한 BI툴 설계, 구현
 
                                       </h3>
                                   </div>
