[New Feature] headline text animation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-subheading"><strong>Kang | Deep-working Developer <br>
+            <div class="masthead-subheading" id ="headline-title">
+				<div id ="headline-title-top">
+					Deep-working Developer<br>
+				</div> 
                     <p> 딥하게 일하는 개발자 강경석입니다.
                 </strong></div>
 
@@ -670,7 +673,9 @@
     <script src="assets/mail/jqBootstrapValidation.js"></script>
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+	<script src="js/scripts.js"></script>
+	
+	<script src="js/headline.js"></script>
 </body>
 
 </html>
