[Refacter] summary 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Kije’s LAB" />
-    <meta name="keywords" content="template, theme, portfolio, developer" />
-    <meta name="description" content="One Page Template for Developer Portfolio" />
-    <title>One Page Template for Developer Portfolio</title>
+    <meta name="keywords" content="frontEnd, portfolio, developer" />
+    <meta name="description" content="Kang's Portfolio" />
+    <title>Kang's Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;500;800&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500&display=swap" />
@@ -21,14 +21,14 @@
     <!-- Header 시작 -->
     <header>
       <div class="container">
-        <h1>개발자 <strong>류준열</strong> 입니다</h1>
+        <h1>개발자 <strong>강경석</strong> 입니다</h1>
       </div>
     </header>
     <!-- Header 끝 -->
     <!-- Navbar 시작 -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid text-uppercase">
-        <a class="navbar-brand" href="#">RYU JUN YEOL</a>
+        <a class="navbar-brand" href="#">KANG GYEONG SEOK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -82,13 +82,10 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Summary</h2>
             <p class="color-basic fonsiz-xl fonwei-kr-xs letsp-xs ws-sm mt-4">
-              안녕하세요. <span class="fonwei-en-xl letsp-md">Javascript Fullstack</span>개발자 류준열입니다.
-              저는 올해 22살이며, 상상하는 것을 만들 수 있다는 것에 매력을 느껴
-              <span class="fonwei-en-xl letsp-md">Hardcore Coding Style</span>에 중독되어 버린 젊은 청춘입니다.
-              린 스타트업 <span class="letsp-md">(Lean Startup)</span> , 린 사고방식 <span class="letsp-md">(Lean Thinking)</span>,
-              애자일 <span class="letsp-md">(Agile)</span> 방법론 등,
-              <span class="fonwei-kr-md"> 개발자를 창조적으로 괴롭히는 혁신적인 방식</span>을
-              <span class="fonwei-kr-md">사랑</span>합니다.          
+              안녕하세요. <span class="fonwei-en-xl letsp-md">FrontEnd</span> 개발자 강경석입니다. 저는 19년도부터 일을 시작한 <span class="fonwei-en-xl letsp-md">2년차</span>입니다. 
+              <br/>내 손으로 무언갈 만들어내는 프로그래밍의 매력을 느껴 <span class="fonwei-en-xl letsp-md">의미있는 것</span>을 만들고자 나아가는 사람입니다. 
+              <br/>코드 리펙토링을 좋아하고 좋은 디자인 패턴을 추구하는 아직은 나아가야할 길이 더 많은 개발자이지만,
+              <br/>함께 일하고 싶은 동료, 신뢰받는 동료가 되기 위해 오늘도 정진하고 있습니다.
             </p>
           </div>
         </div>
