[Refactor] Project 1 진행중

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
       <section class="container pt mt" id="project">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Project</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
-          저는 프로젝트의 시작보다는 마무리에 집중합니다.
-          한번 시작한 프로젝트는 혼자라도 반드시 마무리합니다.
+          저는 깔끔한 코드, 읽기 쉬운 디자인패턴을 마음속에 담고 프로젝트를 끝까지 하기 위해 노력합니다.
         </div>
         <div class="card shadow">
           <div class="card-body">
@@ -114,33 +113,28 @@
                   <tr>
                     <th class="table-title" scope="col">개발한 프로젝트 서비스</th>
                     <td>
-                      <div>[회사명] + 서비스명 + 서비스의 간략한 개요</div>
+                      <div>[카찹]  통합 모빌리티 서비스  : 다양하게 분산되어 있는 모빌리티 서비스를 한 곳에서 통합 검색->결제->반납의 서비스를 제공합니다.</div>
                       <div>
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드 #검색연관키워드 #검색연관키워드
-                        #검색연관키워드
+                        #통합모빌리티 #공유서비스 #대중교통 #가격 비교 #지도서비스 #스타트업 #Co-founder
                       </div>
                       <div>
-                        <span class="badge bg-inprogress">In Progress</span>
-                        <span class="badge bg-grey">React</span>
-                        <span class="badge bg-grey">Redux</span>
-                        <span class="badge bg-grey">JavaScript ES6</span>
-                        <span class="badge bg-grey">HTML5 and CSS3</span>
-                        <span class="badge bg-grey">Bootstrap 4</span>
-                        <span class="badge bg-grey">Node.js</span>
-                        <span class="badge bg-grey">Koa</span>
-                        <span class="badge bg-grey">MongoDB</span>
-                        <span class="badge bg-grey">AWS EC2</span>
+                        <span class="badge bg-done">Done</span>
+                        <span class="badge bg-grey">Android</span>
+                        <span class="badge bg-grey">Java</span>
+                        <span class="badge bg-grey">REST API</span>
+                        <span class="badge bg-grey">GOOGLE MAP</span>
+                        <span class="badge bg-grey">SOCAIAL LOGIN</span>
+                        <span class="badge bg-grey">FIREBASE</span>
                       </div>
                     </td>
                     <td class="text-center">
                       <div class="">( ~ M/M)</div>
                       <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%">
-                          <span class="progress-desc">개발중</span>
+                          <div class="progress-bar progress-bar-striped bg-info" style="width: 100%">
+                          <span class="progress-desc">개발 완료</span>
                         </div>
                       </div>
-                      <div class="progress-desc">프론트엔드 단독 개발</div>
+                      <div class="progress-desc">안드로이드 앱 개발</div>
                     </td>
                     <td class="text-center">
                       <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Modal1">
